--- a/FrontEnd/ValedictorianFE/CSS/login_reg.css
+++ b/FrontEnd/ValedictorianFE/CSS/login_reg.css
@@ -128,21 +128,6 @@ body{
     }
 }
 
-.social-icons{
-    margin: 20px 0;
-}
-
-.social-icons a{
-    border: 1px solid #ccc;
-    border-radius: 20%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 3px;
-    width: 40px;
-    height: 40px;
-}
-
 .toggle-container{
     position: absolute;
     top: 0;
@@ -207,4 +192,15 @@ body{
 
 .container.active .toggle-right{
     transform: translateX(200%);
+}
+
+#my-dropdown {
+    background-color: #eee;
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    border-radius: 8px;
+    width: 100%;
+    outline: none;
 }
