--- a/FrontEnd/ValedictorianFE/CSS/profile.css
+++ b/FrontEnd/ValedictorianFE/CSS/profile.css
@@ -6,9 +6,29 @@ body{
     min-height:100vh;
 }
 
+.homeBtn{
+    position:fixed;
+    top:20px;
+    left:20px;
+    padding:10px 20px;
+    background-color:#701414;
+    color:#fff;
+    font-weight:600;
+    border:none;
+    border-radius:8px;
+    cursor:pointer;
+    box-shadow:0 2px 5px rgba(0,0,0,0.15);
+    transition:0.3s;
+    z-index:10000;
+}
+
+.homeBtn:hover{
+    background-color:#000000;
+    cursor: pointer;
+}
+
 .profileCard{
     width:100%;
-    background-color:#fff;
     box-shadow:0 4px 12px rgba(0,0,0,0.05);
     transition:transform 0.3s ease-out,box-shadow 0.3s ease-out;
     will-change:transform,box-shadow;
