--- a/FrontEnd/ValedictorianFE/CSS/login_reg.css
+++ b/FrontEnd/ValedictorianFE/CSS/login_reg.css
@@ -95,6 +95,16 @@ body{
     transition: all 0.6s ease-in-out;
 }
 
+#login-dropdown {
+    padding: 4px 65px 4px 65px;
+    margin: 10px 0px 10px 0px;
+    font-size: 15px;
+    background-color: rgb(235,235,235);
+    border: none;
+    border-radius: 5px;
+    color: grey;
+}
+
 .sign-in{
     left: 0;
     width: 50%;
