Added multiple HTTP methods
Added multiple HTTP methods for claritas functionality

--- a/FrontEnd/ValedictorianFE/CSS/home.css
+++ b/FrontEnd/ValedictorianFE/CSS/home.css
@@ -12,6 +12,12 @@
     --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+#LOGOUT{
+
+    color: red;
+
+}
+
 /* Reset and Base Styles */
 * {
     margin: 0;
