--- a/FrontEnd/ValedictorianFE/CSS/topic.css
+++ b/FrontEnd/ValedictorianFE/CSS/topic.css
@@ -29,6 +29,24 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
+.btn {
+    padding: 5px 15px 5px 15px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    background: rgb(255,15,0);
+}
+
+.btn:hover{
+    
+    transform: scale(1.1);
+    transition: 0.5s ease;
+    cursor: pointer;
+    font-size: 15px;
+    
+}
 /* Particle background */
 .particle-bg {
     position: fixed;
